Add errorprone linting plugin and fix warnings